deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burn-emulator-api
  namespace: burn-emulator-api
  labels:
    app: burn-emulator-api
spec:
  selector:
    app: burn-emulator-api
  ports:
    - name: http
      port: 8080
      targetPort: http
