deploy/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: burn-emulator-api-route
  namespace: burn-emulator-api
spec:
  parentRefs:
    - name: burn-emulator-api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: burn-emulator-api
          port: 8080
